# AtomEngineOGL

./: Atom-Engine.sln  CMakeLists.txt  LICENSE.txt  README.md
Atom-Engine/: Atom-Engine.vcxproj  Atom-Engine.vcxproj.filters  Atom.cpp  Atom2D.cpp  AtomEngine.hpp  AtomError.cpp  AtomMath.cpp  AtomMath.hpp  Game.cpp  Sprite.cpp  Texture.cpp  TextureManager.cpp  Window.cpp
assets/: pixelShader.cso  pixelShader.hlsl  vertexShader.cso  vertexShader.hlsl
include/: AtomEngine.hpp  AtomMath.hpp  Input.hpp  Logger.hpp  Timer.hpp  resource.h
src/: main.cpp
src/Core/: Atom.cpp  Atom2D.cpp  Game.cpp  TextureManager.cpp
src/Graphics/: Shader.cpp  Sprite.cpp  Texture.cpp  Window.cpp
src/Utils/: AtomError.cpp  Logger.cpp  Timer.cpp
